# cpe-guesser

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.yaml
lib/: cpeguesser.py
lib/cpeimport/: __init__.py  base.py  cvelistv5.py  downloader.py  nvd_json.py
src/cpe_guesser/: __init__.py
src/cpe_guesser/cpeimport/: __init__.py  base.py  downloader.py  nvd_json.py  xml_dictionary.py
tests/: test_cpeguesser.py  test_cvelistv5.py  test_nvd_json.py
